--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/bower/bin/bower install",
     "start": "node server.js"
   },
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "redis": "^2.6.2",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "bower": "0.6.x"
   }
 }
