--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/bower/bin/bower install",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "redis": "^2.6.2",
-    "socket.io": "^1.4.8",
-    "bower": "1.6.x"
+    "redis": "^2.6.2"
   }
 }
